feat: Add support for multiple default namespaces